--- a/demo/loader.css
+++ b/demo/loader.css
@@ -29,3 +29,20 @@ h1 {
 
     background-color: rgba(255, 255, 255, .75);
 }
+
+#slOverlay{
+    display: flex;
+    position: absolute;
+    
+    width: 100vw;
+    height: 100vh;
+    
+    justify-content: center;
+    align-items: center;
+    
+    background-color: white;
+}
+
+#slLoader{
+    
+}
