Changed the background

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -16,7 +16,7 @@ body {
     overflow: hidden;
     user-select: none;
 
-    background-image: url(background.jpg);
+    background-image: url(background.JPG);
     background-size: cover;
     background-position: center;
 }
