--- a/AmethystLoader.css
+++ b/AmethystLoader.css
@@ -1,22 +1,24 @@
-#slOverlay{
+#slOverlay {
     display: flex;
     position: absolute;
-    
+
     width: 100vw;
     height: 100vh;
-    
+
     justify-content: center;
     align-items: center;
-    
+
     background-color: white;
 }
 
-#slLoader{
-  position: absolute; 
-    
-  left: 0; 
-  right: 0; 
-    
-  margin-left: auto; 
-  margin-right: auto; 
+#slLoader {
+    position: absolute;
+
+    left: 0;
+    right: 0;
+
+    width: 15vw;
+
+    margin-left: auto;
+    margin-right: auto;
 }
