--- a/AmethystLoader.css
+++ b/AmethystLoader.css
@@ -9,16 +9,21 @@
     align-items: center;
 
     background-color: white;
+    
+    z-index: 100;
 }
 
 #slLoader {
     position: absolute;
 
+    top: 0;
+    bottom: 0;
     left: 0;
     right: 0;
 
-    width: 15vw;
+    margin: auto;
 
-    margin-left: auto;
-    margin-right: auto;
+    width: 15vw;
+    
+    z-index: 100;
 }
