--- a/demo/styles.css
+++ b/demo/styles.css
@@ -46,11 +46,12 @@ h1 {
 #slLoader {
     position: absolute;
 
+    top: 0;
+    bottom: 0;
     left: 0;
     right: 0;
 
-    width: 15vw;
+    margin: auto;
 
-    margin-left: auto;
-    margin-right: auto;
+    width: 15vw;
 }
