--- a/demo/styles.css
+++ b/demo/styles.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: Montserrat;
+  src: url("../Montserrat-Regular.ttf");
+}
+
+/* @import url('https://fonts.googleapis.com/css?family=Montserrat'); */
 body {
   display: flex;
   width: 100vw;
@@ -12,14 +18,14 @@ body {
   align-items: center;
   overflow: hidden;
   user-select: none;
-  background-image: url(background.jpg);
+  background-image: url(https://images.pexels.com/photos/338936/pexels-photo-338936.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
   background-size: cover;
   background-position: center;
 }
 
 h1 {
-  font-size: 150px;
-  font-family: "Poiret One";
+  font-size: 5vw;
+  font-family: "Montserrat";
   padding: 25px;
   background-color: rgba(255, 255, 255, .75);
 }
